<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/adReg"
        android:layout_width="333dp"
        android:layout_height="49dp"
        android:layout_marginStart="3dp"

        android:layout_marginTop="55sp"
        android:layout_marginEnd="20dp"
        android:text="@string/admin_registration"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="30sp"
        android:layout_marginRight="20sp"
        android:ems="10"
        android:hint="@string/regName"
        android:inputType="textPersonName"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adNic"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:ems="10"
        android:hint="@string/regNic"
        android:inputType="textPersonName"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adMail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:ems="10"
        android:hint="@string/regE_mail"
        android:inputType="textEmailAddress"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adNum"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:ems="10"
        android:hint="@string/regContact_number"
        android:inputType="phone"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adPass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:ems="10"
        android:hint="@string/regPassword"
        android:inputType="textPassword"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adRePass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="-25sp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="65sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="-35sp"
        android:backgroundTint="@color/Apple_Green"
        android:text="@string/regSubmit"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="45sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="-35sp"
        android:backgroundTint="@color/peach_Red"
        android:text="@string/regCancel"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>