<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/usProMan"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="55sp"
        android:layout_marginBottom="25sp"
        android:text="@string/manage_user_profile"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="321dp"
        android:layout_marginBottom="20sp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="100sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:backgroundTint="@color/Apple_Green"
        android:text="@string/usProUpdate"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnProCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:backgroundTint="@color/peach_Red"
        android:text="@string/usProCancel"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>