<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/adList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="25sp"
        android:text="@string/admin_list"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="36sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/listId1"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        app:cardBackgroundColor="@color/layout_background"
        app:cardCornerRadius="20dp">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="270sp"

            android:layout_marginTop="16sp"
            android:text="@string/remove"
            android:textSize="10sp" />

        <Button
            android:id="@+id/idEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="165sp"
            android:layout_marginTop="16sp"
            android:text="@string/edit"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/NameId"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="17sp"
            android:text="@string/regUname"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/listid2"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="@color/layout_background"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/nameId2"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="17sp"
            android:text="@string/regUname"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idEdit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="165sp"
            android:layout_marginTop="16sp"
            android:text="@string/edit"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnDelete3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="270sp"
            android:layout_marginTop="16sp"
            android:text="@string/remove"
            android:textSize="10sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/listid3"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        app:cardBackgroundColor="@color/layout_background"
        app:cardCornerRadius="20dp">

        <Button
            android:id="@+id/idEdit6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="165sp"
            android:layout_marginTop="16sp"
            android:text="@string/edit"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnDelete6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="270sp"
            android:layout_marginTop="16sp"
            android:text="@string/remove"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/nameId5"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="17sp"
            android:text="@string/regUname"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="75sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:backgroundTint="@color/Apple_Green"
        android:text="@string/btnAdd_new"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnlBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:backgroundTint="@color/peach_Red"
        android:text="@string/proBack"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>