<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/usPro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55sp"
        android:text="@string/user_profile"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/usProPic"
        android:layout_width="173dp"
        android:layout_height="171dp"
        android:layout_marginLeft="120sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="30sp"
        app:srcCompat="@drawable/userpng" />

    <EditText
        android:id="@+id/UProName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name :" />

    <EditText
        android:id="@+id/uProNic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="NIC :" />

    <EditText
        android:id="@+id/uProEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="E-Mail :" />

    <EditText
        android:id="@+id/uProcNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Contact Number : " />

    <Button
        android:id="@+id/btnUpdate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="50sp"
        android:layout_marginRight="20sp"
        android:backgroundTint="@color/Apple_Green"
        android:text="@string/usProUpdate"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnpBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:backgroundTint="@color/peach_Red"
        android:text="@string/back"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>